use token_sdk_builder on create_collection

--- a/crates/aptos-api-tester/Cargo.toml
+++ b/crates/aptos-api-tester/Cargo.toml
@@ -22,6 +22,4 @@ url = { workspace = true }
 once_cell = { workspace = true }
 rand = { workspace = true }
 anyhow = { workspace = true }
-
-
-
+aptos-cached-packages = { workspace = true }
