--- a/ecosystem/nft-metadata-crawler/nft-metadata-crawler-parser/Cargo.docker.toml
+++ b/ecosystem/nft-metadata-crawler/nft-metadata-crawler-parser/Cargo.docker.toml
@@ -13,7 +13,9 @@ futures = "0.3.28"
 hyper = { version = "0.14.18", features = ["full"] }
 image = "0.24.5"
 nft-metadata-crawler-utils = { path = "../nft-metadata-crawler-utils" }
+regex = "1.5.5"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.0"
 tokio = { version = "1.21.0", features = ["full"] }
+url = { version = "2.2.2" }
